--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -1,6 +1,21 @@
 server {
 	listen 80;
-	server_name localhost;
-	root /usr/share/nginx/html;
-	index index.html;
+	server_name sbars.42.fr;
+
+	listen 443 ssl;
+	ssl_certificate /etc/nginx/ssl/cert.pem;
+	ssl_certificate_key /etc/nginx/ssl/key.pem;
+	ssl_protocols TLSv1.2 TLSv1.3;
+	location / {
+		root /usr/share/nginx/html/;
+		index index.html;
+		}
+#	location / {
+#		proxy_pass http://wordpress_container:php_fpm_port;
+#		proxy_set_header Host $host;
+#		proxy_set_header X-Real-IP $remote_addr;
+#		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#		proxy_set_header X-Forwarded-Proto $scheme;
+#	}
+	# root /usr/share/nginx/html;
 }
