--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian
+FROM debian:buster
 
 RUN apt-get update -y && apt-get install -y software-properties-common ca-certificates lsb-release apt-transport-https wget curl gnupg
 RUN sh -c 'echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list' 
@@ -6,6 +6,8 @@ RUN sh -c 'echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /
 RUN wget -qO - https://packages.sury.org/php/apt.gpg | apt-key add - 
 RUN apt-get update -y && apt-get install -y php8.2 && php -v
 RUN apt-get install -y php8.2-fpm
+RUN mkdir /run/php
+RUN sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = 9000/' /etc/php/8.2/fpm/pool.d/www.conf
 CMD ["php-fpm8.2", "-F"]
 
 RUN apt-get install -y wordpress
