--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -31,6 +31,8 @@ services:
   mariadb:
     build: ./requirements/mariadb
     env_file: .env
+    ports:
+      - "127.0.0.1:3306:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
