--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -25,19 +25,11 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-
-RUN set -eux; \
-	apt-get update; \
-	apt-get install -y gosu; \
-	rm -rf /var/lib/apt/lists/*; \
-# verify that the binary works
-	gosu nobody true
-
 # Set up environment variables
-ENV MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-ENV MYSQL_DATABASE=${MYSQL_DATABASE}
-ENV MYSQL_USER=${MYSQL_USER}
-ENV MYSQL_PASSWORD=${MYSQL_PASSWORD}
+# ENV MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+# ENV MYSQL_DATABASE=${MYSQL_DATABASE}
+# ENV MYSQL_USER=${MYSQL_USER}
+# ENV MYSQL_PASSWORD=${MYSQL_PASSWORD}
 
 # Copy the custom configuration file
 COPY /conf/my.cnf /etc/mysql/my.cnf
@@ -46,6 +38,6 @@ COPY /conf/my.cnf /etc/mysql/my.cnf
 EXPOSE 3306
 
 # Set up the entrypoint script
-COPY tools/entrypoint.sh /entrypoint.sh
+COPY tools/kickstart.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
