--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     build: ./requirements/nginx
     env_file: .env
     ports:
-      - 8080:80
+      # - 8080:80
       - 443:443
     networks:
       - inception
@@ -27,13 +27,15 @@ services:
       - wp_data:/var/www/html
     networks:
       - inception
+    expose:
+      - "9000"
     restart: always
   mariadb:
     build: ./requirements/mariadb
     env_file: .env
-    ports:
-      - "3306:3306"
-      - "80:80"
+    # ports:
+    #   - "3306:3306"
+    #   - "80:80"
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
