tryin some fastcgi changes in wordpress conf

--- a/srcs/requirements/nginx/conf/wordpress.conf
+++ b/srcs/requirements/nginx/conf/wordpress.conf
@@ -1,22 +1,25 @@
 server {
     listen 80;
-    server_name sbars.42.fr; # Replace with your domain
-    root /var/www/html; # Adjust this to your WordPress root directory
+    server_name sbars.42.fr;
+    root /var/www/html;
 
     index index.php index.html index.htm;
+
+    access_log /var/log/nginx/my_wordpress_site.access.log;
+    error_log /var/log/nginx/my_wordpress_site.error.log;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
+        include fastcgi_params;
         include snippets/fastcgi-php.conf;
-        fastcgi_pass wordpress:9000; # Replace 'wordpress' with the name of your WordPress service defined in the docker-compose.yml file
+        fastcgi_pass wordpress:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
         deny all;
     }
-
-    # Add any additional configurations needed for your specific WordPress setup
 }
