--- a/srcs/requirements/nginx/conf/wordpress.conf
+++ b/srcs/requirements/nginx/conf/wordpress.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name sbars.42.fr;
-    root /var/www/html;
+    root /usr/share/wordpress;
 
     index index.php index.html index.htm;
 
