--- a/srcs/requirements/nginx/conf/wordpress.conf
+++ b/srcs/requirements/nginx/conf/wordpress.conf
@@ -15,7 +15,7 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         include snippets/fastcgi-php.conf;
-        fastcgi_pass localhost:9000;
+        fastcgi_pass wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
