--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -19,10 +19,13 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
-        include snippets/fastcgi-php.conf;
+        try_files $uri =404;
         fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        include fastcgi.conf;
+        # include snippets/fastcgi-php.conf;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
     }
 
     location ~ /\.ht {
