new location thing and started php after wordpress is isntalled vs before

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -1,34 +1,45 @@
-server {
-    listen 80;
-    server_name sbars.42.fr;
+events {}
 
-    listen 443 ssl;
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
+http {
+    include /etc/nginx/mime.types;
+    server {
+        # listen 80;
+        server_name sbars.42.fr;
+        listen 443 ssl;
+        listen  [::]::443 ssl;
 
-    root /usr/share/wordpress;
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
 
-    index index.php index.html index.htm;
+        root /usr/share/wordpress;
+        index index.html index.php phpinfo.php index.htm;
 
-    access_log /var/log/nginx/my_wordpress_site.access.log;
-    error_log /var/log/nginx/my_wordpress_site.error.log;
+        access_log /var/log/nginx/my_wordpress_site.access.log;
+        error_log /var/log/nginx/my_wordpress_site.error.log;
 
-    location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        include fastcgi.conf;
-        # include snippets/fastcgi-php.conf;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-    }
+        location ~ \.php$ {
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass   wordpress:9000;
+            fastcgi_index  index.php;
+            include        fastcgi_params;
+            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param  PATH_INFO $fastcgi_path_info;
 
-    location ~ /\.ht {
-        deny all;
+            # try_files $uri =404;
+            # fastcgi_pass wordpress:9000;
+            # fastcgi_index index.php;
+            # include fastcgi.conf;
+            # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            # include fastcgi_params;
+        }
+
+        location ~ /\.ht {
+            deny all;
+        }
     }
 }
