changed ports to 9000:9000 for wp, and uncmted 3306:3306 for mariadb

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -27,15 +27,14 @@ services:
       - wp_data:/var/www/html
     networks:
       - inception
-    expose:
-      - "9000"
+    ports:
+      - 9000:9000
     restart: always
   mariadb:
     build: ./requirements/mariadb
     env_file: .env
-    # ports:
-    #   - "3306:3306"
-    #   - "80:80"
+    ports:
+      - "3306:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
