changed index directive in nginx.conf

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -12,7 +12,7 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
 
         root /usr/share/wordpress;
-        index index.html index.php phpinfo.php index.htm;
+        index index.php index.htm;
 
         access_log /var/log/nginx/my_wordpress_site.access.log;
         error_log /var/log/nginx/my_wordpress_site.error.log;
