--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -18,7 +18,8 @@ http {
         error_log /var/log/nginx/my_wordpress_site.error.log;
 
         location / {
-            try_files $uri $uri/ /index.php?$args;
+            # try_files $uri $uri/ /index.php?$args;
+            try_files   $uri $uri/ $uri.html =404;
         }
 
         location ~ \.php$ {
@@ -37,8 +38,8 @@ http {
             # include fastcgi_params;
         }
 
-        location ~ /\.ht {
-            deny all;
-        }
+        # location ~ /\.ht {
+        #     deny all;
+        # }
     }
 }
