readding previous location / try files to php files

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -7,9 +7,9 @@ http {
         server_name sbars.42.fr;
         listen 443 ssl;
 
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
 
         root /usr/share/wordpress;
         index index.php index.htm;
@@ -18,8 +18,8 @@ http {
         error_log /var/log/nginx/my_wordpress_site.error.log;
 
         location / {
-            # try_files $uri $uri/ /index.php?$args;
-            try_files   $uri $uri/ $uri.html =404;
+            try_files $uri $uri/ /index.php?$args;
+            # try_files   $uri $uri/ $uri.html =404;
         }
 
         location ~ \.php$ {
