add index.html to root directive in nginx conf

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -12,7 +12,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
         root /usr/share/wordpress;
-        index index.php index.htm;
+        index index.php index.html index.htm;
 
         access_log /var/log/nginx/my_wordpress_site.access.log;
         error_log /var/log/nginx/my_wordpress_site.error.log;
@@ -23,6 +23,7 @@ http {
         }
 
         location ~ \.php$ {
+            try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass   wordpress:9000;
             fastcgi_index  index.php;
@@ -30,7 +31,7 @@ http {
             fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param  PATH_INFO $fastcgi_path_info;
 
-            # try_files $uri =404;
+            
             # fastcgi_pass wordpress:9000;
             # fastcgi_index index.php;
             # include fastcgi.conf;
