--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -18,18 +18,22 @@ http {
         error_log /var/log/nginx/my_wordpress_site.error.log;
 
         location / {
-            try_files $uri $uri/ /index.php?$args;
-            # try_files   $uri $uri/ $uri.html =404;
+            # try_files $uri $uri/ /index.php?$args;
+            try_files   $uri $uri/ $uri.html =404;
         }
 
         location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass   wordpress:9000;
-            fastcgi_index  index.php;
-            include        fastcgi_params;
-            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param  PATH_INFO $fastcgi_path_info;
+            # grademe tutorial version
+            include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;	
+
+            # try_files $uri =404;
+            # fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            # fastcgi_pass   wordpress:9000;
+            # fastcgi_index  index.php;
+            # include        fastcgi_params;
+            # fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            # fastcgi_param  PATH_INFO $fastcgi_path_info;
 
             
             # fastcgi_pass wordpress:9000;
