--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -6,27 +6,17 @@
 [server]
 
 
-# this is only for the mysqld standalone daemon
-[mysqld]
-#skip-networking
-
 # Galera-related settings
 [galera]
-# Mandatory settings
-#wsrep_on=ON
-#wsrep_provider=
-#wsrep_cluster_address=
-#binlog_format=row
-#default_storage_engine=InnoDB
-#innodb_autoinc_lock_mode=2
-#
 # Allow server to accept connections on all interfaces.
 #
-bind-address=0.0.0.0
+[mysqld]
+datadir = /var/lib/mysql
+socket = /run/mysqld/mysqld.sock
+bind-address=*
+port = 3306
+# user = mysql
 #
-# Optional setting
-#wsrep_slave_threads=1
-#innodb_flush_log_at_trx_commit=0
 
 # this is only for embedded server
 [embedded]
