--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.1'
 
 networks:
     inception:
+      driver: bridge
 
 volumes:
   wp_data:
@@ -47,8 +48,6 @@ services:
     env_file: .env
     expose:
       - "3306"
-    # ports:
-    #   - "3306:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
