--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,16 +6,16 @@ RUN sh -c 'echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /
 RUN wget -qO - https://packages.sury.org/php/apt.gpg | apt-key add - 
 RUN apt-get update -y && apt-get install -y php8.2 && php -v
 RUN apt-get install -y php8.2-fpm
-RUN mkdir /run/php
-RUN sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = wordpress:9000/' /etc/php/8.2/fpm/pool.d/www.conf
-RUN sed -i 's/;clear_env = no/clear_env = no/' /etc/php/8.2/fpm/pool.d/www.conf
 
 # RUN apt-get install -y wordpress
+RUN mkdir /var/www
 RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
 RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
 RUN	chown -R root:root /var/www/wordpress
 COPY conf/wp-config.php /usr/share/wordpress/wp-config.php
 
-EXPOSE 3306
+RUN mkdir /run/php
+RUN sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = wordpress:9000/' /etc/php/8.2/fpm/pool.d/www.conf
+RUN sed -i 's/;clear_env = no/clear_env = no/' /etc/php/8.2/fpm/pool.d/www.conf
 
 CMD ["php-fpm8.2", "-F"]
