changed root directive

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -1,4 +1,6 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
     include /etc/nginx/mime.types;
@@ -11,14 +13,13 @@ http {
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
-        root /usr/share/wordpress;
+        root /var/www/html;
         index index.php index.html index.htm;
 
         access_log /var/log/nginx/my_wordpress_site.access.log;
         error_log /var/log/nginx/my_wordpress_site.error.log;
 
         location / {
-            # try_files $uri $uri/ /index.php?$args;
             try_files   $uri $uri/ $uri.html =404;
         }
 
