bad paths before

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -13,7 +13,7 @@ http {
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
-        root /var/www/html;
+        root /var/www/wordpress;
         index index.php index.html index.htm;
 
         access_log /var/log/nginx/my_wordpress_site.access.log;
