--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -13,27 +13,28 @@ http {
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
         root /var/www/wordpress;
-        index index.php index.html index.htm;
+        index index.php index.html;
 
         access_log /var/log/nginx/my_wordpress_site.access.log;
         error_log /var/log/nginx/my_wordpress_site.error.log;
 
         location / {
-            try_files   $uri $uri/ $uri.html =404;
+            # try_files   $uri $uri/ $uri.html =404;
+            try_files $uri $uri/ /index.php?$args;
         }
 
         location ~ \.php$ {
             # grademe tutorial version
-            include snippets/fastcgi-php.conf;
-			fastcgi_pass wordpress:9000;	
+            # include snippets/fastcgi-php.conf;
+			# fastcgi_pass wordpress:9000;	
 
-            # try_files $uri =404;
-            # fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            # fastcgi_pass   wordpress:9000;
-            # fastcgi_index  index.php;
-            # include        fastcgi_params;
-            # fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            # fastcgi_param  PATH_INFO $fastcgi_path_info;
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass   wordpress:9000;
+            fastcgi_index  index.php;
+            include        fastcgi_params;
+            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param  PATH_INFO $fastcgi_path_info;
 
             
             # fastcgi_pass wordpress:9000;
