different unified.conf file

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -1,51 +1,39 @@
-events {
-    worker_connections 1024;
-}
-
 http {
     include /etc/nginx/mime.types;
+
     server {
-        server_name sbars.42.fr;
+        listen 80 default_server;
+        server_name _;
+        return 444;
+    }
+
+    server {
         listen 443 ssl;
+        server_name sbars.42.fr;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
         root /var/www/wordpress;
-        index index.php index.html;
+        index index.php index.html index.htm;
 
         access_log /var/log/nginx/my_wordpress_site.access.log;
         error_log /var/log/nginx/my_wordpress_site.error.log;
 
         location / {
-            # try_files   $uri $uri/ $uri.html =404;
             try_files $uri $uri/ /index.php?$args;
         }
 
         location ~ \.php$ {
-            # grademe tutorial version
-            # include snippets/fastcgi-php.conf;
-			# fastcgi_pass wordpress:9000;	
-
-            # try_files $uri =404;
-            # fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            # fastcgi_pass   wordpress:9000;
-            # fastcgi_index  index.php;
-            # include        fastcgi_params;
-            # fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            # fastcgi_param  PATH_INFO $fastcgi_path_info;
-
-            
+            include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
-            fastcgi_index index.php;
-            include fastcgi.conf;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
 
-        # location ~ /\.ht {
-        #     deny all;
-        # }
+        location ~ /\.ht {
+            deny all;
+        }
     }
 }
