trying just index.php as index

--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -20,7 +20,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
         root /var/www/wordpress;
-        index index.php index.html index.htm;
+        index index.php;
 
         access_log /var/log/nginx/my_wordpress_site.access.log;
         error_log /var/log/nginx/my_wordpress_site.error.log;
