--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -7,7 +7,9 @@ RUN wget -qO - https://packages.sury.org/php/apt.gpg | apt-key add -
 RUN apt-get update -y && apt-get install -y php8.2 && php -v
 RUN apt-get install -y php8.2-fpm
 
+
 # RUN apt-get install -y wordpress
+RUN chmod -R 755 /var/www/wordpress
 RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
 RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
 RUN	chown -R root:root /var/www/wordpress
