--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name sbars.42.fr;
+        server_name localhost;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/cert.pem;
