--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,12 +1,8 @@
-version: '3.1'
-
-networks:
-  inception:
-    driver: bridge
+version: '3.8'
 
 volumes:
   wp_data:
-    driver: local
+    driver: /Users/sbars/data/wordpress
     driver_opts:
       type: 'none'
       o: 'bind'
@@ -17,6 +13,10 @@ volumes:
       type: 'none'
       o: 'bind'
       device: '/Users/sbars/data/mariadb'
+
+networks:
+  inception:
+    driver: bridge
 
 services:
   nginx:
