--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -22,7 +22,9 @@ RUN apk update && \
         curl \
     && rm -rf /var/cache/apk/*
 
-COPY conf/nginx.conf /etc/nginx/nginx.conf
+COPY conf/unified.conf /etc/nginx/nginx.conf
+COPY ssl/cert.pem /etc/nginx/ssl/cert.pem
+COPY ssl/key.pem /etc/nginx/ssl/key.pem
 
 EXPOSE 443
 
