--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -4,16 +4,12 @@ events {
 
 http {
     include /etc/nginx/mime.types;
-
-    server {
-        listen 80 default_server;
-        server_name _;
-        return 444;
-    }
+    default_type    application/octet-stream;
 
     server {
         listen 443 ssl;
-        server_name localhost;
+        listen [::]:443 ssl;
+        server_name _;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/cert.pem;
