--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -28,7 +28,7 @@ RUN apt-get update -y && \
 
 # Copy the custom configuration file
 RUN rm -f /var/lib/my.cnf.d/mariadb-server.cnf
-COPY /conf/my.cnf /var/lib/mysql/my.cnf
+COPY /conf/my.cnf /usr/my.cnf
 
 # Expose the MariaDB port
 # EXPOSE 3306
