--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -27,6 +27,7 @@ RUN apt-get update -y && \
     rm -rf /var/lib/apt/lists/*
 
 # Copy the custom configuration file
+RUN rm -f /var/lib/mysql/my.cnf
 RUN rm -f /etc/mysql/my.cnf.d/mariadb-server.cnf
 COPY /conf/my.cnf /etc/mysql/my.cnf
 
