--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -26,6 +26,10 @@ COPY conf/unified.conf /etc/nginx/nginx.conf
 COPY ssl/cert.pem /etc/nginx/ssl/cert.pem
 COPY ssl/key.pem /etc/nginx/ssl/key.pem
 
+RUN sudo chown -R www-data:www-data *
+RUN sudo chmod 755 {dir}
+RUN sudo chmod 644 {files}
+
 EXPOSE 443
 
 # start nginx ("-g" to pass the command "deamon off;" to nginx be run in the foreground
