--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - wp_data:/var/www/html
+      - wp_data:/var/www/wordpress
     networks:
       - inception
     expose:
