--- a/srcs/requirements/nginx/conf/unified.conf
+++ b/srcs/requirements/nginx/conf/unified.conf
@@ -31,12 +31,20 @@ http {
             # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             # include fastcgi_params;
             # inuani version
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass   wordpress:9000;
-            fastcgi_index  index.php;
-            include        fastcgi_params;
-            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param  PATH_INFO $fastcgi_path_info;
+            # fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            # fastcgi_pass   wordpress:9000;
+            # fastcgi_index  index.php;
+            # include        fastcgi_params;
+            # fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            # fastcgi_param  PATH_INFO $fastcgi_path_info;
+
+            # eprei version
+            try_files $uri  =404;
+		    fastcgi_pass wordpress:9000;
+		    fastcgi_index index.php;
+		    include fastcgi.conf;
+		    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		    include fastcgi_params;
         }
 
         location ~ /\.ht {
