--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -22,7 +22,7 @@ RUN apk update && \
     ln -s /usr/bin/php8 /usr/bin/php
 
 COPY ./conf/script.sh /script.sh
-COPY ./conf/wp-config.php /home/sbars
+COPY ./conf/wp-config.php /var/www/wordpress
 RUN chmod +x /script.sh
 
 CMD ["sh", "/script.sh"]
