--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -26,7 +26,7 @@ RUN mkdir -p /var/www/wordpress && \
     rm -rf *
 
 COPY ./conf/script.sh /script.sh
-COPY ./conf/wp-config.php /var/www/wordpress
+COPY ./conf/wp-config.php /var/www/wordpress/wp-config.php
 RUN chmod +x /script.sh
 
 CMD ["sh", "/script.sh"]
