--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -27,6 +27,7 @@ RUN mkdir -p /var/www/wordpress && \
 
 COPY ./conf/script.sh /script.sh
 COPY ./conf/wp-config.php /var/www/wordpress/wp-config.php
+RUN chmod 777 /var/www/wordpress/wp-config.php
 RUN chmod +x /script.sh
 
 CMD ["sh", "/script.sh"]
