--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -59,6 +59,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
     - mariadb
-    restart: failure
+    restart: on_failure
     expose:
     - "9000"
