db users fixed in wp and mariadb scripts

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,8 +5,8 @@ MYSQL_ROOT_PASSWORD=root123
 # database name (database used in the wordpress instance)
 MYSQL_DATABASE=wp_db
 # user created when container first started
-MYSQL_USER=login
-MYSQL_PASSWORD=login123
+MYSQL_USER=sbars
+MYSQL_PASSWORD=sbars123
 
 # WORDPRESS
 
@@ -19,13 +19,11 @@ WP_DB_PASSWORD=${MYSQL_PASSWORD}
 WP_DB_NAME=${MYSQL_DATABASE}
 
 # wp admin
-WP_ADMIN_USER=login
-WP_ADMIN_PWD=login123
-WP_ADMIN_EMAIL=inception@login.42.fr
+WP_ADMIN_EMAIL=inception@sbars.42.fr
 
 # wp user
 WP_USER=test
-WP_USER_PWD=test
-WP_USER_EMAIL=login@login.42.fr
+WP_USER_PWD=test123
+WP_USER_EMAIL=test@sbars.42.fr
 
 # nginx
