--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,13 +5,13 @@ networks:
     driver: bridge
 
 volumes:
-  wordpress:
+  wp:
     driver: local
     driver_opts:
       type: 'none'
       o: 'bind'
       device: '/Users/sbars/data/wordpress'
-  mariadb:
+  db:
     driver: local
     driver_opts:
       type: 'none'
@@ -20,7 +20,7 @@ volumes:
 
 services:
   mariadb:
-    container_name: mariadb-1
+    container_name: mariadb
     networks:
     - inception
     build:
@@ -28,14 +28,14 @@ services:
       dockerfile: Dockerfile
     env_file: .env
     volumes:
-    - mariadb:/var/lib/mysql
-    restart: unless-stopped
+    - db:/var/lib/mysql
     expose:
     - "3306"
+    restart: unless-stopped
   nginx:
     container_name: nginx
     volumes:
-    - wordpress:/var/www/wordpress
+    - wp:/var/www/wordpress
     networks:
     - inception
     depends_on:
@@ -51,7 +51,7 @@ services:
     container_name: wordpress
     env_file: .env
     volumes:
-    - wordpress:/var/www/wordpress
+    - wp:/var/www/wordpress
     networks:
       - inception
     build:
@@ -59,6 +59,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
     - mariadb
-    restart: on_failure
+    restart: on-failure
     expose:
     - "9000"
