--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -52,10 +52,10 @@ http {
 			try_files $uri $uri/ =404;
 		}
 
-		# location ~ \.php$ {
-		# 	include snippets/fastcgi-php.conf;
-		# 	# fastcgi_pass wordpress:9000;
-		# }
+		location ~ \.php$ {
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+		}
 	}
 
 	##
