uncommented user www-data and other things

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,9 +1,9 @@
 # THIS IS MY CONF FILE NOT YOURS
 
-# user www-data;
-# worker_processes auto;
-# pid /run/nginx.pid;
-# include /etc/nginx/modules-enabled/*.conf;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
 	worker_connections 768;
