new mariadb script

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -32,7 +32,6 @@ http {
 		listen 443 ssl;
 		listen [::]:443 ssl;
 
-		ssl off;
 		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/ssl/certs/inception.crt;
 		ssl_certificate_key /etc/ssl/private/inception.key;
@@ -42,7 +41,7 @@ http {
 
 		# INIT
 
-		server_name localhost;
+		server_name _;
 
 		root /var/www/wordpress;
 		index index.php index.html index.htm;
