--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     env_file: .env
     volumes:
     - db:/var/lib/mysql
+    - wp:/var/www/wordpress
     expose:
     - "3306"
     restart: unless-stopped
