--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -41,7 +41,7 @@ http {
 
 		# INIT
 
-		server_name _;
+		server_name sbars.42.fr;
 
 		root /var/www/wordpress;
 		index index.php index.html index.htm;
