--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 volumes:
   wp_data:
-    driver: /Users/sbars/data/wordpress
+    driver: local
     driver_opts:
       type: 'none'
       o: 'bind'
