--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -3,14 +3,19 @@ FROM debian:buster
 RUN apt update -y && apt upgrade -y
 RUN apt-get -y install wget
 
-RUN apt-get install -y php7.3 \
-php-fpm \
-php-mysql \
+RUN apt-get install -y \
+php7.3 \
+php7.3-fpm \
+php7.3-mysql \
+php7.3-phar \
+php7.3-json \
+php7.3-xml \
+php7.3-mbstring \
+php7.3-curl \
+php7.3-gd \
+php7.3-intl \
+php7.3-zip \
 mariadb-client
-
-# change params
-# RUN sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = wordpress:9000/' /etc/php/7.3/fpm/pool.d/www.conf
-# RUN sed -i 's/;clear_env = no/clear_env = no/' /etc/php/7.3/fpm/pool.d/www.conf
 
 RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
 RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
