--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -20,7 +20,7 @@ mariadb-client
 RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
 RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
 # RUN	chown -R root:root /var/www/wordpress
-RUN chown -R www-data:www-data /var/www/wordpress
+RUN chown -R root:root /var/www/wordpress
 
 
 COPY ./conf/php.conf /etc/php/7.3/fpm/pool.d/www.conf
