installing wordpress differently for fun

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -17,13 +17,12 @@ php7.3-intl \
 php7.3-zip \
 mariadb-client
 
-RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
-RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
-# RUN	chown -R root:root /var/www/wordpress
-RUN chown -R root:root /var/www/wordpress
-
-
 COPY ./conf/php.conf /etc/php/7.3/fpm/pool.d/www.conf
+RUN useradd http
+
+# RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
+# RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
+# RUN chown -R root:root /var/www/wordpress
 
 # wp config cli and config
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -31,5 +30,8 @@ RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp
 
 COPY conf/script.sh /script.sh
-RUN chmod 777 /script.sh
+RUN chmod +x /script.sh
+
+WORKDIR /var/www/wordpress
+
 ENTRYPOINT [ "sh", "/script.sh" ]
