--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,13 +10,13 @@ volumes:
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/Users/sbars/data/wordpress'
+      device: '${HOME}/data/wordpress'
   db:
     driver: local
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/Users/sbars/data/mariadb'
+      device: '${HOME}/data/mariadb'
 
 services:
   mariadb:
